Fix Social-icons color in Dark Mode

--- a/src/App.css
+++ b/src/App.css
@@ -36,8 +36,9 @@ footer.page-footer {
   bottom: 0;
 }
 
-div.social-icons {
+i.social-icons {
   font-size: 30px;
+  color: black !important;
 }
 
 a.social-custom-link {
